src/index.css
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
}
*{
	box-sizing: border-box;
}
body{
	 background: rgb(107,25,135);
background: radial-gradient(circle, rgba(107,25,135,1) 0%, rgba(194,148,233,1) 100%); 
/* Background attribuiton to : https://cssgradient.io/ & Rodrigo Pereira */
}

h1 {
	font-size: 36px;
	margin-top: 10px;
	margin-bottom: 10px;
}

h2 {
	font-size: 26px;
}

header {
	display: flex;
	justify-content: space-between;
	width: 100%;
	height: 4em;
	background-color: lightgrey;
	border-bottom: solid 3px black;
}

nav {
	width: 200px;
}

ul {
	list-style: none;
}

.form-container {
	display: flex;
	justify-content: center;
}

.results {
	display: flex;
	justify-content: center;
	
}

.results-inner{
	margin-top: 40px;
	color: white;
	font-size: 1.3em;
	background-color: rgba(0, 0, 0, .3);
	text-align: center;
	border: solid 10px rgba(0, 0, 0, .3);
	border-radius: 10px;
	width: 70vw;
	max-width: 700px;
}

audio{
	margin-bottom: 30px;
	margin-top: 30px;
}

form{
	margin-top: 20px;
	width: 70vw;
	max-width: 700px;
	height: 500px;
	background-color: rgba(0, 0, 0, .3);
	font-size: 20px; 
	color: white;
	padding: 20px;
	border: solid 10px rgba(0, 0, 0, .3);
	border-radius: 10px;
}

form input {
	height: 30px;
	font-size: 20px;
}



form li{
	display: flex;
  	flex-wrap: wrap;
	align-items: center;
	padding: 10px;
}

form label {
	flex: 1 0 120px;
  	max-width: 220px;
}

form button{
	width: 30%;
	height: 35px;
	background-color: white;
	transition: 0.3s;
}

form button:hover {
	font-weight: bold;
	background-color: salmon;
	color: white;
}

/* Form styling attribution: George Martsoukos @ https://webdesign.tutsplus.com/tutorials/building-responsive-forms-with-flexbox--cms-26767 */

